--- a/index.html
+++ b/index.html
@@ -12,6 +12,37 @@
     <main class="about-us">
         <div class="about-us__block1">
             <h1 class="about-us__block1__title h1">About Us</h1>
+            <div class="about-us__block1__patterns">
+                <img class="about-us__block1__patterns_garlic" src="./images/aboutImg/patterns/Pattern1.svg"
+                    alt="Garlic">
+                <img class="about-us__block1__patterns_strawberry" src="./images/aboutImg/patterns/Pattern2.svg"
+                    alt="Strawberry">
+                <img class="about-us__block1__patterns_seeds" src="./images/aboutImg/patterns/Pattern3.svg" alt="Seeds">
+                <img class="about-us__block1__patterns_leaves" src="./images/aboutImg/patterns/Pattern4.svg"
+                    alt="Leaves">
+                <img class="about-us__block1__patterns_part1" src="./images/aboutImg/patterns/pattern5/Part1.svg"
+                    alt="Part1">
+                <img class="about-us__block1__patterns_part2" src="./images/aboutImg/patterns/pattern5/Part2.svg"
+                    alt="Part2">
+                <img class="about-us__block1__patterns_part3" src="./images/aboutImg/patterns/pattern5/Part3.svg"
+                    alt="Part3">
+                <img class="about-us__block1__patterns_part4" src="./images/aboutImg/patterns/pattern5/Part4.svg"
+                    alt="Part4">
+                <img class="about-us__block1__patterns_part5" src="./images/aboutImg/patterns/pattern5/Part5.svg"
+                    alt="Part5">
+                <img class="about-us__block1__patterns_part6" src="./images/aboutImg/patterns/pattern5/Part6.svg"
+                    alt="Part6">
+                <img class="about-us__block1__patterns_part7" src="./images/aboutImg/patterns/pattern5/Part7.svg"
+                    alt="Part7">
+                <img class="about-us__block1__patterns_part8" src="./images/aboutImg/patterns/pattern5/Part8.svg"
+                    alt="Part8">
+                <img class="about-us__block1__patterns_part9" src="./images/aboutImg/patterns/pattern5/Part9.svg"
+                    alt="Part9">
+                <img class="about-us__block1__patterns_part10" src="./images/aboutImg/patterns/pattern5/Part10.svg"
+                    alt="Part10">
+                <img class="about-us__block1__patterns_part11" src="./images/aboutImg/patterns/pattern5/Part11.svg"
+                    alt="Part11">
+            </div>
         </div>
         <div class="about-us__block2">
             <div class="about-us__block2__images">
