--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         industry. Lorem had ceased to been the industry's standard the 1500s, when an unknown</div>
                     <div class="block3__fake-button_1 fake-button">
                         <img src="./images/aboutImg/icons(b3)/circle.svg" alt="Circle">
-                        <div class="about-us__block3__title-mid title-mid">100% Natural Product</div>
+                        <div class="block3__title-mid title-mid">100% Natural Product</div>
                     </div>
                     <div class="block3__text_2 subtitle">Simply dummy text of the printing and typesetting
                         industry Lorem Ipsum</div>
